--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,3 +13,23 @@ h2 {
   font-weight: bolder;
   transition: .2s;
 }
+.container, .container-add {
+  max-width: 500px;
+  margin: 30px auto;
+  overflow: auto;
+  min-height: 300px;
+  padding: 30px;
+  border-radius: 5px;
+  background-color: #eaedf2;
+}
+
+.container-add {
+  margin-top: 0px;
+  max-width: 60%;
+  margin-left: 30%;
+  height: 100%;
+  padding-left: 100px;
+  padding-right: 100px;
+  box-shadow:  12px 12px 24px #bfdcf541,
+             -12px -12px 24px #bfdcf541;
+}
