--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -72,3 +72,40 @@ input::placeholder, textarea::placeholder {
   color: white;
   margin-top: 60px;
 }
+.header {
+  display: flex;
+  flex-direction: column;
+  padding: 0px 0 10px 5%;
+  width: 20%;
+  align-items: center;
+  height: 100%;
+  position: fixed;
+  box-shadow: #31383F 0px 0px 10px 0px;
+}
+
+.nav-links {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 30%;
+  justify-content: space-between;
+}
+.nav-links a {
+  display: flex;
+  align-items: center;
+  padding: 4px;
+  font-size: 15px;
+  width: fit-content;
+}
+.nav-links a:hover {
+  background-color:#f5d0b1;
+  border-radius: 20px;
+  color: #d5824e;
+}
+a {
+  text-decoration: none;
+  color: steelblue;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+}
