--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -109,3 +109,11 @@ a {
   font-weight: 400;
   line-height: 24px;
 }
+.image-upload > input {
+  visibility: hidden;
+  width: 0;
+  height: 0;
+}
+.image-upload img {
+  cursor: pointer;
+}
