--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -52,7 +52,7 @@ h2 {
   padding: 3px 7px;
 }
 
-.form-control input, label, textarea, .choose, .btn {
+.form-control input, label, textarea, .choose, .btn, .btn-2 {
     font-size: 20px;
     padding-left: 20px;
     border: none;
@@ -62,6 +62,16 @@ h2 {
     transition: .3s;
     outline: none;
     color: steelblue;
+}
+.btn {
+  padding-left: 0px;
+}
+.btn-2 {
+  width: 30%;
+  background-color: steelblue;
+  color: white;
+  font-size: 15px;
+  padding-left: 0px;
 }
 input::placeholder, textarea::placeholder {
   font-size: 17px;
@@ -116,4 +126,28 @@ a {
 }
 .image-upload img {
   cursor: pointer;
+}
+ul li {
+  list-style: none;
+}
+.box {
+  margin-bottom: 10px;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 10px;
+  border-radius: 10px;
+}
+.boxes {
+  background-color: #d0ddf2;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  height: fit-content;
+  width: 100%;
+}
+.dark-blue {
+  background-color: steelblue;
 }
