--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -85,7 +85,7 @@ input::placeholder, textarea::placeholder {
 .header {
   display: flex;
   flex-direction: column;
-  padding: 0px 0 10px 5%;
+  padding: 0px 0px 10px 5%;
   width: 20%;
   align-items: center;
   height: 100%;
@@ -97,13 +97,13 @@ input::placeholder, textarea::placeholder {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 30%;
+  height: 40%;
   justify-content: space-between;
 }
 .nav-links a {
   display: flex;
   align-items: center;
-  padding: 4px;
+  padding: 6px;
   font-size: 15px;
   width: fit-content;
 }
@@ -150,4 +150,10 @@ ul li {
 }
 .dark-blue {
   background-color: steelblue;
+}
+.bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
