--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -245,3 +245,49 @@ p {
 .show-modal {
   visibility: visible;
 }
+  /* Media Query */
+  @media only screen and (max-width: 800px) {
+    
+    .container-add {
+      padding: 0%;
+      max-width: 100%;
+      margin-left: 14%;
+    }
+
+    .bar img {
+      width: 28px;
+      height: 28px;
+    }
+    .bar h2 {
+      display: none;
+    }
+    .header {
+      width: 13%;
+      padding: 10px 5px;
+    }
+  
+    .header span {
+      display: none;
+    }
+  
+    .header .logout-button {
+      width: 40px;
+      border-radius: 50%;
+      font-size: 0.6rem;
+      margin-left: 20px;
+    }
+  
+  
+    .nav-links a {
+      display: flex;
+      align-items: center;
+      padding: 4px 4px 4px 4px;
+      font-size: 15px;
+      margin-left: 10px;
+      width: fit-content;
+    }
+    .nav-links a i {
+      margin-right: 0;
+    }
+  }
+  
